# fastapi-chatapp

./: README.md  pyproject.toml
fastapi_chatapp/: main.py
